fix: update product ranking retrieval to sort by quantity and revenue